Fix cart overflow/scrollbar
Fix for #232

--- a/inc/woocommerce/css/woocommerce.scss
+++ b/inc/woocommerce/css/woocommerce.scss
@@ -76,7 +76,7 @@
 
 		.product_list_widget {
 			max-height: 15em;
-			overflow-y: scroll;
+			overflow-y: auto;
 		}
 	}
 }
